# namosim-release

./: .dockerignore  CHANGELOG.rst  Dockerfile  LICENSE  README.md  debian.store  package.xml  paper.bib  paper.md  patches.conf  pyrightconfig.json  releaser_history.json  requirements.txt  setup.cfg  setup.py  tracks.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  draft-pdf.yml
debian/: changelog  control  copyright  gbp.conf  rules
docs/source/: conf.py  contributing.rst  creating_custom_agents.rst  creating_custom_scenarios.rst  creating_svg_scenario.rst  creating_yaml_scenario.rst  guides.rst  index.rst  installation.rst  modules.rst  namosim.agents.rst  namosim.algorithms.rst  (+10 more)
examples/: 1_robot_1_obstacle_social.sh  1_robot_1_obstacle_with_rrt_manip_search.sh  1_robot_2_obstacles_social.sh  2_robot_deadlock_with_evasion.sh  3_robots.sh  compute_plan.py  compute_plan.sh  with_slam_generated_map.sh
namosim/: config.py  data_models.py  exceptions.py  input.py  log.py  main.py  report.py  scenario_generation.py  simulator.py  svg_styles.py
notebooks/: analysis-v2-jsa.ipynb  analysis-v2-wg-multi-shape.ipynb  analysis-v2.ipynb  analysis.ipynb
rviz/: basic_view.rviz
scripts/: format.sh  gen_joss_paper.sh  gen_scenarios_citi.sh  gen_scenarios_intersections.sh  gen_scenarios_willow_garage.sh  gen_scenarios_willow_garage_multi_shape.sh  launch_experiments_citi.sh  launch_experiments_intersections.sh  launch_experiments_willow_garage.sh  launch_experiments_willow_garage_multi_shape.sh  make_docs.sh  test_all.sh  test_e2e.sh  test_examples.sh  test_types.sh  test_unit.sh
(+66 files in other folders)
